Remade Crusher (almost fully working, some desync issues to solve now)